--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "goit-node-rest-api",
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "joi": "^17.12.0",
+    "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "nanoid": "^5.0.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.3"
   }
 }
