--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "gravatar": "^1.8.2",
+    "jimp": "^0.22.10",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.4"
   },
   "devDependencies": {
